--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/crew_recyclerview"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    <data>
+        <variable
+            name="viewModel"
+            type="com.test.fevertest.ui.MainViewModel"/>
+    </data>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/crew_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:items="@{viewModel.listCrew}"/>
+</layout>
