--- a/app/src/main/res/layout/item_crew.xml
+++ b/app/src/main/res/layout/item_crew.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="crew"
             type="com.test.domain.model.Crew" />
     </data>
-    
+
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/layout_item_container"
         android:layout_width="match_parent"
         android:layout_height="70dp"
@@ -37,17 +37,17 @@
 
             <TextView
                 android:id="@+id/crew_name"
-                android:text="@{crew.name}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true" />
+                android:layout_alignParentTop="true"
+                android:text="@{crew.name}" />
 
             <TextView
                 android:id="@+id/crew_race"
-                android:text="@{crew.race.name}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true" />
+                android:layout_alignParentBottom="true"
+                android:text="@{crew.race.name}" />
         </RelativeLayout>
 
         <TextView
